Kubernetes - fix fist test